<resources>
    <string name="app_name">Kadouk</string>
    <string name="title_game">Game</string>
    <string name="title_downloads">Downloads</string>
    <string name="title_search">Search</string>
    <string name="title_account">Account</string>

    <string name="settings">Settings</string>
    <string name="register_later">i will register later</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_four">Four</string>
    <string name="loggedIn">You are Logged in ;)</string>
    <string name="app">app</string>

    <!-- Strings related to login and sign up-->
    <string name="birthday_date">Birthday Date</string>
    <string name="txv_gender">your kid gender:</string>
    <string name="btn_login">login</string>
    <string name="hint_number">Number</string>
    <string name="title_login">login</string>
    <string name="title_signUp">SignUp</string>
    <string name="hint_more_uses">what more do you use?</string>
    <string name="btn_signUp">sign up</string>
    <string name="boy">پسر</string>
    <string name="girl">دختر</string>
    <string name="have_account">Have an Account?</string>
    <string name="not_have_account">Do not have an Account?</string>
    <string name="hint_password">password</string>
    <string name="hint_cPassword">confirm password</string>
    <string name="next">next</string>
    <string name="back">back</string>
    <string name="submit">submit</string>
    <string name="name">name</string>
    <string name="exit">exit</string>
    <string name="app_icon">app_image</string>
    <string name="install_icon">install icon</string>
    <string name="app_category">آموزش و یادگیری</string>
    <string name="open_category">نمایش همه</string>
    <string name="enter_your_number">لطفا شماره موبایل خورد را وارد کنید</string>
    <string name="hint_example_number">example: 09121112233</string>
    <string name="signup_later">i will signup later</string>
    <string name="enter_your_kid_name">نام فرزند خود را وارد کنید</string>
    <string name="your_kid_birthday">تاریخ تولد:</string>
    <string name="enter_code">کد تایید را وارد کنید</string>
    <string name="tab_account">حساب کاربری</string>
    <string name="tab_download">دانلودها</string>
    <string name="tab_search">جستوجو</string>
    <string name="tab_game">بازی ها</string>

    <string-array name="day">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>


    <string-array name="month">
        <item>فروردین</item>
        <item>اردیبهشت</item>
        <item>خرداد</item>
        <item>تیر</item>
        <item>مرداد</item>
        <item>شهریور</item>
        <item>مهر</item>
        <item>آبان</item>
        <item>آذز</item>
        <item>دی</item>
        <item>بهمن</item>
        <item>اسفند</item>
    </string-array>

    <string-array name="year">
        <item>1395</item>
        <item>1394</item>
        <item>1393</item>
        <item>1392</item>
        <item>1391</item>
        <item>1390</item>
        <item>1389</item>
        <item>1388</item>
        <item>1387</item>
        <item>1386</item>
        <item>1385</item>
        <item>1384</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="install">نصب</string>
    <string name="uniq">یک دنیا تفریح و یادگیری</string>
    <string name="wait_to_receive_code">لطفا تا دریافت کد منتظر بمانید.</string>
    <string name="resend_code">ارسال دوباره</string>
    <string name="none_messages">پیامی دریافت نکردید؟</string>
    <string name="select_parent_password">انتخاب کلمه عبور والدین</string>
    <string name="games">بازی ها</string>
    <string name="editText_search_hint">دنبال چی میگردی؟</string>
    <string name="not_suport">این قابلیت در تلفن همراه شما قابل اجرا نیست</string>
    <string name="speech_to_text_title">برنامه ای که میخوای رو بگو</string>
    <string name="year">سال</string>
    <string name="producer">سازنده</string>
    <string name="ages">رده سنی</string>
    <string name="category">دسته بندی</string>
    <string name="images">تصاویر</string>
    <string name="tags">برچسب ها</string>
    <string name="download_update_text_optional">نسخه جدید رو بگیر ;)</string>
    <string name="download_update_bigtext_optional">نسخه جدید نرم افزار در دسترس است آیا میخواهید بروزرسانی کنید؟</string>
    <string name="download_update_alert_force">بدون بروزرسانی قادر به ادامه دادن نمیباشد، آیا بروزرسانی میکنید؟</string>
    <string name="dwonload_update_alert_yes">باشه</string>
    <string name="dwonload_update_alert_no">نه</string>

</resources>
