<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <tabs>

        <tab
            id="@+id/account"
            icon="@mipmap/ic_tab_profile"
            inActiveColor="@color/component_inactive"
            activeColor="@color/color_primary"
            title="@string/tab_account" />

        <tab
            id="@+id/download"
            icon="@mipmap/ic_tab_updates"
            inActiveColor="@color/component_inactive"
            activeColor="@color/color_primary"
            title="@string/tab_download"/>

        <tab
            id="@+id/search"
            icon="@mipmap/ic_tab_search"
            inActiveColor="@color/component_inactive"
            activeColor="@color/color_primary"
            title="@string/tab_search" />

        <tab
            id="@+id/game"
            icon="@mipmap/ic_tab_game"
            inActiveColor="@color/component_inactive"
            activeColor="@color/color_primary"
            title="@string/tab_game" />

    </tabs>
</PreferenceScreen>