<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kadouk.app.ProductPageFragment"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/product_toolbar"
        style="@style/toolbar"
        android:gravity="center_horizontal"
        android:elevation="@dimen/toolbar_shadow"
        android:background="@color/bg">

        <TextView
            android:id="@+id/product_toolbar_title"
            style="@style/productToolbarTitle"
            android:text="ریبو و رابی" />
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_single"
                android:layout_marginTop="@dimen/space_large"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/product_txv_app_name"
                        style="@style/ProductNameTextView" />

                    <TextView
                        android:id="@+id/product_txv_app_desc"
                        style="@style/ProductDetailsTextView" />

                    <TextView
                        android:id="@+id/product_txv_app_size"
                        style="@style/ProductDetailsTextView" />

                    <TextView
                        android:id="@+id/product_txv_app_cost"
                        style="@style/ProductDetailsTextView"/>

                </LinearLayout>

                <ImageView
                    android:id="@+id/product_img_app"
                    android:layout_width="@dimen/list_image"
                    android:layout_height="@dimen/list_image"
                    android:layout_marginEnd="@dimen/space_double"
                    android:layout_marginRight="@dimen/space_double"
                    android:contentDescription="@string/app_icon" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/space_single"
                android:gravity="right">

                <ProgressBar
                    android:id="@+id/pbProcessing"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:indeterminateOnly="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/space_large"
                    android:layout_marginLeft="@dimen/space_large"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/space_large"
                    android:text="Download"
                    android:id="@+id/btn-download" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.33">

                    <TextView
                        android:id="@+id/txv_app_producer"
                        style="@style/ProductProfileTextView"
                        android:text="@string/producer"/>

                    <TextView
                        android:id="@+id/txv_app_team"
                        style="@style/ProductProfileTextView"
                        android:textColor="@color/textCaption"
                        android:text="تیم آرتمیک"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.33">

                    <TextView
                        android:id="@+id/txv_app_ages"
                        style="@style/ProductProfileTextView"
                        android:text="@string/ages"/>

                    <TextView
                        android:id="@+id/txv_app_age"
                        style="@style/ProductProfileTextView"
                        android:textColor="@color/textCaption"
                        android:text="۳ تا ۷ سال"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.33">

                    <TextView
                        android:id="@+id/txv_app_category"
                        style="@style/ProductProfileTextView"
                        android:text="@string/category"/>

                    <TextView
                        android:id="@+id/txv_app_category_value"
                        style="@style/ProductProfileTextView"
                        android:textColor="@color/textCaption"
                        android:text="آموزش و یادگیری"/>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/txv_app_screenshots"
                style="@style/ProductNameTextView"
                android:layout_marginTop="@dimen/space_large"
                android:text="@string/images"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_screenshots"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_large"/>

            <TextView
                android:id="@+id/txv_app_tags"
                style="@style/ProductNameTextView"
                android:layout_marginTop="@dimen/space_large"
                android:text="@string/tags"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>

